<resources>
    <string name="app_name">HwLife</string>

    <string name="menu1">숙제</string>
    <string name="menu2">숙제 설정</string>
    <string name="menu3">맵</string>
    <string name="menu4">채집</string>
    <string name="menu5">팁</string>
    <string name="menu6">팁 요청</string>
    <string name="menu7">공시 알라미</string>
    <string name="menu8">설정</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>