<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="main"
            type="com.example.hwlife.activity.MainActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        //1
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="10dp"
                android:layout_weight="1"
                android:layout_margin="@dimen/menu_margin"
                android:elevation="10dp"
                android:onClick="@{()->main.startAc(0)}"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:id="@+id/menu1_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_launcher_foreground"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.2dp"
                        android:background="#000000"/>

                    <TextView
                        android:text="@string/menu1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="10dp"
                android:layout_weight="1"
                android:layout_margin="@dimen/menu_margin"
                android:id="@+id/card2"
                android:elevation="10dp"
                android:onClick="@{()->main.startAc(1)}"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/menu2_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_launcher_foreground" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.2dp"
                        android:background="#000000"/>

                    <TextView
                        android:text="@string/menu2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>




        </LinearLayout>

        //3
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="10dp"
                android:layout_weight="1"
                android:layout_margin="@dimen/menu_margin"
                android:id="@+id/card3"
                android:elevation="10dp"
                android:onClick="@{()->main.startAc(2)}"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/menu3_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_launcher_foreground" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.2dp"
                        android:background="#000000"/>

                    <TextView
                        android:text="@string/menu3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="10dp"
                android:layout_weight="1"
                android:layout_margin="@dimen/menu_margin"
                android:id="@+id/card4"
                android:elevation="10dp"
                android:onClick="@{()->main.startAc(3)}"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/menu4_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_launcher_foreground" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.2dp"
                        android:background="#000000"/>

                    <TextView
                        android:text="@string/menu4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

        //5
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="10dp"
                android:layout_weight="1"
                android:layout_margin="@dimen/menu_margin"
                android:id="@+id/card5"
                android:elevation="10dp"
                android:onClick="@{()->main.startAc(4)}"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/menu5_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_launcher_foreground" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.2dp"
                        android:background="#000000"/>

                    <TextView
                        android:text="@string/menu5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="10dp"
                android:layout_weight="1"
                android:layout_margin="@dimen/menu_margin"
                android:id="@+id/card6"
                android:elevation="10dp"
                android:onClick="@{()->main.startAc(5)}"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/menu6_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_launcher_foreground" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.2dp"
                        android:background="#000000"/>

                    <TextView
                        android:text="@string/menu6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

        //7
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="10dp"
                android:layout_weight="1"
                android:layout_margin="@dimen/menu_margin"
                android:id="@+id/card7"
                android:elevation="10dp"
                android:onClick="@{()->main.startAc(6)}"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/menu7_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_launcher_foreground" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.2dp"
                        android:background="#000000"/>

                    <TextView
                        android:text="@string/menu7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="10dp"
                android:layout_weight="1"
                android:layout_margin="@dimen/menu_margin"
                android:id="@+id/card8"
                android:elevation="10dp"
                android:onClick="@{()->main.startAc(7)}"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/menu8_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_launcher_foreground" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.2dp"
                        android:background="#000000"/>

                    <TextView
                        android:text="@string/menu8"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>


    </LinearLayout>

</layout>
